--- a/src/routes/Firma V2/style.css
+++ b/src/routes/Firma V2/style.css
@@ -1,24 +1,66 @@
 
-
 *{
     margin: 0;
     padding: 0;
 }
 
-.title{
-    text-align: center;
-    padding: 20;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
+
+.title{
+
+    text-align: center;
+    padding: 60px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 10x;
 }
 
+body {
+    background-color:  skyblue ; 
+}
 
-.pdfview{
-    margin: auto;
+.contrato{
+    margin: left;
     display: block;
-    width: 850;
+    width: 850px;
     height: 100vh;
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 75px;
+}
 
+.titulo-formulario {
+    text-align: right;
+    padding: 60px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 10px;
+}
+
+
+.formulario-cliente {
+    display: inline-block;
+    vertical-align: top;
+    width: 40%;
+    padding: 20px;
+    margin-top: 60px;
+}
+
+.campo-input {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.boton-enviar {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.boton-enviar:hover {
+    background-color: #45a049;
 }
